  'expression' question type makes use of it.

* The decimal precision of numbers in the 'expression' question type can now be
  altered via the 'csq_precision' variable.

* Made CAT-SOOP work properly with LibreJS
  (https://www.gnu.org/software/librejs/).

* Added support for Python sandboxing via bubblewrap
  (https://github.com/projectatomic/bubblewrap)

CHANGED:

* Updated KaTeX to version 0.10.0-beta.

* Updated MathJax to version 2.7.4.

* URL format for static files has changed (__STATIC__ -> _static).

* URL format for utilities has changed (cs_util -> _util).

* 'csq_threshold' and 'csq_ratio_check' have been replaced with
  'csq_ratio_threshold' and 'csq_absolute_threshold' in the 'expression'
  question type.  The more lenient of the two thresholds is used.  Default
  behavior is the same as before.

DEPRECATED:

* The special directory name __MEDIA__ has been renamed to __STATIC__ to better
  reflect its purpose.  __MEDIA__ will be removed in a future version.  Use
  __STATIC__ instead.

* The catsoop.tools library was renamed to catsoop.thirdparty to better reflect
  its contents.  The csm_tools pointer to these libraries will be removed in a
  future version.  Use csm_thirdparty instead.

* print should now be used instead of cs_print to inject page content from
  within <python> tags.  cs_print will be removed in a future version.

REMOVED:

* Removed jQuery, Bootstrap, and SweetAlert2 (replaced with our own JS/CSS).

* Removed cs_util/process_theme and removed dependence on outside fonts.

FIXED:

* Fixed an issue with error reporting when trying to log a tuple that contains
  an element that can't be logged.

* Fixed an issue that caused CAT-SOOP's main page to crash if a course with a
  malformed preload.py was present.

SECURITY:

* Prevent submissions from being able to access materials defined in
  csq_code_pre from pythoncode questions.

DOCUMENTATION:


##################
# Version 12.1.1 #
##################

FIXED:
