@@ -5,6 +5,13 @@
 
 
 
+    "assigned": "adam j hartz <hz@mit.edu>", 
+
+
+
+
+
+
     "creator": "adam j hartz <hz@mit.edu>", 
 
 
@@ -26,7 +33,7 @@
 
 
 
-    "status": "open", 
+    "status": "fixed", 
 
 
 
